# slurm-maint-controller

./: .gitignore  Makefile  README.md  boot_timer_checker.py  controller.py  maint_operator.py  pyproject.toml  rebooter.py  requirements.txt
.github/workflows/: ci-cd.yaml
docs/: state_diagram.puml
tests/: test_decommission.py  test_node_counting.py  test_node_states.py  test_reservation_parsing.py
